--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa CLone</h1>
+      <p class="welcome-header__text">
+        If you have Kokoa Account, log in with your email or your phone number.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <!--이런 form은 많지 않을거라 class가 아닌 id 설정-->
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <input type="submit" value="Sign Up" />
+      <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
     <!--script는 항상 body태그를 닫기 직전, 마지막에 위치해야함-->
     <script
       src="https://kit.fontawesome.com/2b23ef432d.js"
