--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,74 @@
-Hello this is friends
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!--css파일 가져오는 링크 단축키 link:css 엔터!-->
+    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Friends - Kokoa Talk</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <!-- status-bar는 3열로 되어있으므로 column이라는 class를 만들어줌. 근데 'column'은 너무 일반적인 이름이므로 
+        status-bar(부모)의 column(자식)이라는 것을 알 수 있게 하기 위해 'status-bar__column'로 지어줌. -->
+      <div class="status-bar__column">
+        <span>No service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fas fa-battery-full fa-2x"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
+    </div>
+
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-solid fa-music fa-lg"></i></span>
+        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      </div>
+    </header>
+
+    <!--Navigation bar : ul로 나뉘고 많은 li로 구성됨. li는 a를 가짐
+    shortcut : nav>ul>li*4>a -->
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <!--parent-->
+          <a class="nav__link" href="#">
+            <!--child-->
+            <span class="nav__notification">1</span>
+            <i class="fa-regular fa-comment fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <div class="nav__update"></div>
+            <i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--script는 항상 body태그를 닫기 직전, 마지막에 위치해야함-->
+    <script
+      src="https://kit.fontawesome.com/2b23ef432d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
