User Component part One

--- a/friends.html
+++ b/friends.html
@@ -34,6 +34,24 @@
       </div>
     </header>
 
+    <a id="friends-display-link"
+      ><i class="fa-solid fa-circle-info"></i>Friends' Name Display<i
+        class="fa-solid fa-chevron-right fa-xs"
+      ></i
+    ></a>
+    <!-- 사용자 프로필 형식(프사 / 이름)-->
+    <div class="user-component">
+      <!-- .user-component__column*2 : class name이 user-component__column인 것 두개 만들기 -->
+      <div class="user-component__column">
+        <img src="screenshots/profile.png" class="user-component__avatar" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">조예은</h4>
+          <h6 class="user-component__subtitle">Please check my acoount.</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <!--Navigation bar : ul로 나뉘고 많은 li로 구성됨. li는 a를 가짐
     shortcut : nav>ul>li*4>a -->
     <nav class="nav">
