--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Talk</title>
+    <title>Chats - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,60 +26,29 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span><i class="fa-solid fa-gear fa-lg"></i></span>
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i>
-      <span>Friends' Name Display</span>
-      <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
-    <!-- 사용자 프로필 형식(프사 / 이름)을 한 박스로 묶어주기 -->
-    <main class="friends-screen">
+    <main class="main-screen">
       <div class="user-component">
-        <!-- .user-component__column*2 : class name이 user-component__column인 것 두개 만들기 -->
         <div class="user-component__column">
-          <!-- class name 뒤에 --xl 붙이면 modifier  -->
-          <img
-            src="screenshots/profile.png"
-            class="user-component__avatar user-component__avatar--xl"
-          />
+          <img src="screenshots/profile.png" class="user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">조예은</h4>
-            <!-- <h5 class="user-component__subtitle">Please check my acoount.</h5> -->
+            <h5 class="user-component__subtitle">
+              Please check my Kokoa Account Info
+            </h5>
           </div>
         </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fa-solid fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <!-- class name 뒤에 --sm 붙이면 modifier(사이즈 변화)  -->
-            <img
-              src="screenshots/profile.png"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2</span> <i class="fa-solid fa-chevron-right fa-xs"></i>
-            </div>
-          </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
         </div>
       </div>
     </main>
@@ -90,7 +59,7 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
@@ -98,8 +67,8 @@
           <a class="nav__link" href="chats.html">
             <!--child-->
             <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i
-          ></a>
+            <i class="fas fa-comment fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html"
