--- a/find.html
+++ b/find.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Talk</title>
+    <title>Find - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,46 +26,64 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><i class="fa-solid fa-gear fa-lg"></i>
+          <div class="update"></div>
+        </span>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="screenshots/profile.png" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">조예은</h4>
-            <h5 class="user-component__subtitle">
-              Please check my Kokoa Account Info
-            </h5>
-          </div>
+      <div class="find-icons">
+        <!-- .find-icons__icon*4>span -->
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-qrcode"></i> <span>QR Code</span>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
+        <div class="find-icons__icon">
+          <i class="fa-regular fa-address-book"></i><span>Add by Contacts</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-regular fa-envelope"></i><span>Invite</span>
         </div>
       </div>
-    </main>
-    <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="screenshots/profile.png" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">조예은</h4>
-            <h5 class="user-component__subtitle">
-              Please check my Kokoa Account Info
-            </h5>
-          </div>
+      <div class="recommended-friends">
+        <h5 class="recommended-friends__title">Recommended Friends</h5>
+        <span>You have no recommended friends</span>
+      </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span
+            >Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i
+          ></span>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h4 class="open-post___title">#BTS</h4>
+            <!-- subtitle에 모두 대문자로 쓰이는 것은 디자인적 요소이므로 HTML에서는 소문자로 작성하고 CSS에서 대문자로 바꿔줌-->
+            <h5 class="open-post___hashtags">#bts#army#friends</h5>
+            <div class="open-post__members">
+              <img src="screenshots/profile.png" />
+              <span class="open-post__member-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img src="screenshots/profile.png" />
+              <div class="open-post__heart-count">
+                <i class="fa-solid fa-heart fa-xs"></i>
+                <span>326</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -84,7 +102,7 @@
           <a class="nav__link" href="chats.html">
             <!--child-->
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
