--- a/friends.html
+++ b/friends.html
@@ -108,8 +108,8 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <div class="nav__update"></div>
-            <i class="fa-solid fa-ellipsis fa-2x"></i
+            <i class="fa-solid fa-ellipsis fa-2x"></i>
+            <div class="update"></div
           ></a>
         </li>
       </ul>
