--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Talk</title>
+    <title>More - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,9 +26,10 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Find</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span
           ><i class="fa-solid fa-gear fa-lg"></i>
           <div class="badge__update"></div>
@@ -36,53 +37,75 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <!-- .user-component__column*2 : class name이 user-component__column인 것 두개 만들기 -->
+        <div class="user-component__column">
+          <!-- class name 뒤에 --xl 붙이면 modifier  -->
+          <img
+            src="screenshots/profile.png"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">조예은</h4>
+            <h5 class="user-component__subtitle">
+              +82 010-2612-0342
+              <i
+                class="fa-solid fa-circle-exclamation badge__circle-exclamation"
+              ></i>
+            </h5>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <i class="fa-regular fa-message fa-2x"></i>
+        </div>
+      </div>
       <div class="icon-row">
         <!-- .icon-row__icon*4>span -->
         <div class="icon-row__icon">
-          <i class="fa-solid fa-qrcode"></i> <span>QR Code</span>
+          <i class="fa-regular fa-calendar"></i> <span>Calendar</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-address-book"></i><span>Add by Contacts</span>
+          <i class="fa-regular fa-hard-drive"></i><span>Talk Drive </span>
+          <div class="badge__update"></div>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
+          <i class="fa-regular fa-face-smile"></i><span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-envelope"></i><span>Invite</span>
+          <i class="fa-solid fa-brush"></i><span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-solid fa-link"></i><span>Account</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-regular fa-comments"></i><span>Openchat</span>
         </div>
       </div>
-      <div class="recommended-friends">
-        <h5 class="recommended-friends__title">Recommended Friends</h5>
-        <span>You have no recommended friends</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4>Open Chat</h4>
-          <span
-            >Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i
-          ></span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h4 class="open-post___title">#BTS</h4>
-            <!-- subtitle에 모두 대문자로 쓰이는 것은 디자인적 요소이므로 HTML에서는 소문자로 작성하고 CSS에서 대문자로 바꿔줌-->
-            <h5 class="open-post___hashtags">#bts#army#friends</h5>
-            <div class="open-post__members">
-              <img src="screenshots/profile.png" />
-              <span class="open-post__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-post__member-status">Active</span>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestion__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img src="screenshots/profile.png" />
-              <div class="open-post__heart-count">
-                <i class="fa-solid fa-heart fa-xs"></i>
-                <span>326</span>
-              </div>
+        </div>
+        <div class="more-suggestion__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+        </div>
+        <div class="more-suggestion__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
         </div>
       </div>
@@ -113,7 +136,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <i class="fa-solid fa-ellipsis fa-2x"></i>
-            <div class="update"></div
+            <div class="badge__update"></div
           ></a>
         </li>
       </ul>
