--- a/more.html
+++ b/more.html
@@ -31,7 +31,7 @@
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span
-          ><i class="fa-solid fa-gear fa-lg"></i>
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a>
           <div class="badge__update"></div>
         </span>
       </div>
@@ -84,28 +84,42 @@
       </div>
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggestions</h4>
-        <div class="more-suggestion__icons">
+        <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <i class="fa-solid fa-quote-right"></i>
             </div>
             <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
-        </div>
-        <div class="more-suggestion__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-user-group"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Friends</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-gamepad"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Friends Gem</span>
+          </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <i class="fa-solid fa-quote-right"></i>
             </div>
             <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
-        </div>
-        <div class="more-suggestion__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fa-solid fa-quote-right"></i>
+              <i class="fa-solid fa-user-group"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Kokoa Friends</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-gamepad"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Friends Gem</span>
           </div>
         </div>
       </div>
