--- a/chats.html
+++ b/chats.html
@@ -36,21 +36,23 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="screenshots/profile.png" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">조예은</h4>
-            <h5 class="user-component__subtitle">
-              Please check my Kokoa Account Info
-            </h5>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="screenshots/avatar.JPG" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">한빈</h4>
+              <h5 class="user-component__subtitle">
+                Please check my Kokoa Account Info
+              </h5>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
     <main class="main-screen">
       <div class="user-component">
