--- a/settings.html
+++ b/settings.html
@@ -28,7 +28,9 @@
     <!-- header.alt-header>div.alt-header__column*3 -->
     <header class="alt-header">
       <div class="alt-header__column">
-        <i class="fa-solid fa-chevron-left fa-2x"></i>
+        <a href="more.html">
+          <i class="fa-solid fa-chevron-left fa-2x"></i>
+        </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Settings</h1>
@@ -40,17 +42,26 @@
 
     <main class="main-screen">
       <ul class="settings-list">
-        <li class="settings-setting">
-          <i class="fa-solid fa-bullhorn"></i>
-          <span>Notices</span>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-bullhorn"></i>
+            <span>Notices</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
-        <li class="settings-setting">
-          <i class="fa-solid fa-flask"></i>
-          <span>KoKoa Lab</span>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-flask"></i>
+            <span>KoKoa Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
-        <li class="settings-setting">
-          <i class="fa-solid fa-circle-info"></i>
-          <span>Version</span>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-circle-info"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
         </li>
       </ul>
     </main>
