Write Message Input

--- a/chat.html
+++ b/chat.html
@@ -65,6 +65,17 @@
       </div>
     </main>
 
+    <form class="reply">
+      <div class="reply__column">
+        <i class="fa-regular fa-square-plus fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message..." />
+        <i class="fa-regular fa-face-smile fa-lg"></i>
+        <button><i class="fa-solid fa-arrow-up"></i></button>
+      </div>
+    </form>
+
     <!--script는 항상 body태그를 닫기 직전, 마지막에 위치해야함-->
     <script
       src="https://kit.fontawesome.com/2b23ef432d.js"
