--- a/chat.html
+++ b/chat.html
@@ -28,8 +28,9 @@
     <!-- header.alt-header>div.alt-header__column*3 -->
     <header class="alt-header">
       <div class="alt-header__column">
-        <!-- 이전 html 페이지로 연결 -->
-        <a href="javascript:history.back();">
+        <!-- 이전 html 페이지로 연결
+        <a href="javascript:history.back();"> -->
+        <a href="chats.html">
           <i class="fa-solid fa-chevron-left fa-2x"></i>
         </a>
       </div>
