--- a/friends.html
+++ b/friends.html
@@ -115,6 +115,11 @@
       </ul>
     </nav>
 
+    <!--splash screen-->
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
     <!--script는 항상 body태그를 닫기 직전, 마지막에 위치해야함-->
     <script
       src="https://kit.fontawesome.com/2b23ef432d.js"
