--- a/chat.html
+++ b/chat.html
@@ -77,6 +77,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+
     <!--script는 항상 body태그를 닫기 직전, 마지막에 위치해야함-->
     <script
       src="https://kit.fontawesome.com/2b23ef432d.js"
